# fancli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
fancli/: __init__.py  cli.py  help.txt
