[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fancli"
version = "0.1.3"
description = "CLI for controlling smart fans (currently Atomberg)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Affan Sajid", email = "inbox.affansajid@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Affan-sajid/fancli"
Repository = "https://github.com/Affan-sajid/fancli"
Issues = "https://github.com/Affan-sajid/fancli/issues"

[project.scripts]
fancli = "fancli.cli:main"

[tool.setuptools]
packages = ["fancli"]

[tool.setuptools.package-data]
fancli = ["help.txt"]
